# cuda-bezier-triangle-raytracer

./: .gitignore  .gitmodules  README.md
reference/: 3dGeomUtil.h  CMakeLists.txt  bezier.h  bezierLens.cpp  bezierLens.h  bezierMesh.cpp  bezierMesh.h  bezierTriangle.cpp  bezierTriangle.h  googleTest.cpp  hostUtil.cpp  hostUtil.h  mesh.cpp  mesh.h  meshUtils.h  rayTracer.cpp  reference.cbp  solve3x3.cpp  test.cpp  tmp.cpp  util.cpp  util.h
thrust-initial/: CMakeLists.txt  main.cu
